syntax = "proto3";

option go_package = "github.com/looplab/eventhorizon/codec/protobuf/pb";

package codec.protobuf.pb;

import "google/protobuf/timestamp.proto";

message Event {
    string EventType = 1;
    bytes RawData = 2;
    google.protobuf.Timestamp Timestamp = 3;
    string AggregateType = 4;
    string AggregateID = 5;
    int32 Version = 6;
    bytes Metadata = 7;
    bytes Context = 8;
}
